# discounted-product-aggregator

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
app/models/: product.py
app/routers/: products.py
app/schemas/: product.py
app/services/: scraper.py
app/settings/: config.py
app/utils/: amazon_scraper.py  zara_scraper.py
