[tool.poetry]
name = "discountedproductaggregator"
version = "0.1.0"
description = ""
authors = ["mohamad <ahmadi@vollabor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
httpx = "^0.28.1"
playwright = "^1.51.0"
pydantic = "^2.11.2"
python-dotenv = "^1.1.0"
redis = "^5.2.1"
pytest = "^8.3.5"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
celery = "^5.5.0"
base = "^0.0.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
